syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.distledgerserver;

option java_multiple_files = true;
import "DistLedgerCommonDefinitions.proto";

// Cross-server interface of the DistLedger Service (only for phases 2 & 3 of the project)

message PropagateStateRequest {
  LedgerState state = 1;
}

message PropagateStateResponse {}

message CheckAvailabilityRequest {}

message CheckAvailabilityResponse {}

service DistLedgerCrossServerService {
  rpc propagateState(PropagateStateRequest) returns (PropagateStateResponse);
  rpc checkAvailability(CheckAvailabilityRequest) returns (CheckAvailabilityResponse);
}
